src/test/06-Errors/error-static-init-local-v.txt
error-static-init-local-v.ck:12:5: error: cannot access local variable 'N' to initialize a static variable
[12]     N => static int THE_NUM;
         ^
